# gamebrain-cli

./: .gitignore  README.md  main.py  pr_check.sh  pyproject.toml
.github/workflows/: pr_check.yml
src/: client.py  constants.py  main.py
src/tests/: conftest.py  test_client.py  test_main.py
