[project]
name = "gamebrain-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "requests>=2.32.4",
    "urllib3>=2.0.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "requests-mock>=1.12.1",
]
